# intro-outro-generator

./: .gitignore  Dockerfile  GPN17-Fahrplan.XML  README.md  README_AE.md  apple-prores-4444.cmprstng  c3t_rpc_client.py  easing.py  flake.nix  gstrenderer.py  hd1080p.compressorsetting  make-adobe-after-effects.py  make-apple-motion.py  make-blender.py  make-ffmpeg-fade.py  make-ffmpeg.py  make-godot.py  make-overlay.py  make-overlay.sh  make-snapshots.sh  make.py  qt-animation.cmprstng  renderlib.py  requirements.txt  schedulelib.py  schedulelib_json.py  schedulelib_xml.py  script-Z-preroll-generator.py  script-Z-tracker-changes.sql  svgtemplate.py
00_example_render_byid/: __init__.py
13np/: __init__.py
14np/: __init__.py
16c3/: __init__.py
1c2/: __init__.py
2014/: .gitignore  make.py
30-jahre-btx/: __init__.py
32c3sz/: __init__.py
35c3/: intro.aep  intro.jsx
35c3-chaoswest/: intro.aep  outro.aep
35c3-wikipakawg/: intro.aep  outro.aep
36c3/: __init__.py
DS2016/: __init__.py
DS2018/: __init__.py
SHA2017/: Intro.motn  Outro.motn  README.md
afu/: __init__.py
afu-tm18/: __init__.py
archconf2020/: __init__.py
asg2017/: __init__.py
asg2019/: __init__.py
backend/: main.py  make.py  pyproject.toml  renderlib.py  requirements.txt  settings.py
backend/generator/bub2018/: __init__.py
bornhack2021/: __init__.py
bub2018/: __init__.py
bub2022/: __init__.py
camp1999/: __init__.py
camp2023/: config.ini
cc15/: __init__.py
cccamp15/: __init__.py
cccamp19/: OFL.txt  config.ini
chaosradio/: .__init__.py.swp  __init__.py
(+300 files in other folders)
